GHA/build-fw: replace deprecated 'set-env' with Environment Files
looking at github actions logs, there are (security vulnerability) warnings:

> The set-env command is deprecated and will be disabled soon. Please upgrade to using Environment Files.
> For more information see: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/

according to kubernetes/minikube#9541 running the following command to fix it:

find . -type f -name "*.yml" -print0 | xargs -0 sed -i -r 's/echo "::set-env name=(.*)::(.*)"/echo "\1=\2" >> $GITHUB_ENV/g'"

--- a/.github/workflows/build-firmware.yml
+++ b/.github/workflows/build-firmware.yml
@@ -41,7 +41,7 @@ jobs:
         # in addition replace all / by _
         var=$(echo ${GITHUB_REF} | sed -e 's#^[a-zA-Z]*/[a-zA-Z]*/##; s#/#_#g;')
         echo helper-var: ${var}
-        echo "::set-env name=BRANCHNAME_normalized::${var}"
+        echo "BRANCHNAME_normalized=${var}" >> $GITHUB_ENV
     - name: OpenWrt ${{ env.next_buildstep }}
       run: |
         echo "running: make -f Makefile.autobuild ${MAKE_OPTS} ${next_buildstep}"
